Fix error with sign up button

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="form__footer">
                     <div class="controls">
-                        <button class="button prev" type="button">
+                        <button class="button prev disabled" type="button">
                             <span class="fas fa-arrow-left"></span> Prev
                         </button>
                         <button class="button next" type="button">
