--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Registration Form | Web Design | SASS | Responsive"
+        />
+        <meta name="author" content="Cybertech Yasholma" />
         <title>Registration Form</title>
         <link
             rel="stylesheet"
@@ -12,10 +17,18 @@
     </head>
     <body>
         <div class="registration">
-            <img src="./background.png" alt="" class="registration__img" />
+            <img
+                src="./background.webp"
+                alt="Background Image"
+                class="registration__img"
+            />
             <h2 class="heading">Sign Up</h2>
             <form class="form" autocomplete="off">
-                <img class="form__image" src="/background.png" />
+                <img
+                    class="form__image"
+                    src="/background.webp"
+                    alt="User Icon"
+                />
                 <div class="form__body">
                     <div class="user-account">
                         <h4 class="form__title">User Account</h4>
@@ -101,7 +114,7 @@
                     </div>
 
                     <div class="thank-you hide">
-                        <h3></h3>
+                        <h4></h4>
                         <p></p>
                     </div>
                 </div>
