--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         />
-        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="/css/style.min.css" />
     </head>
     <body>
         <div class="registration">
@@ -134,6 +134,6 @@
             </form>
         </div>
 
-        <script src="app.js"></script>
+        <script src="app.min.js"></script>
     </body>
 </html>
